Fix unnecessary height scrollbar

--- a/src/crease.web/src/app/cards/card-viewer/card-viewer.component.css
+++ b/src/crease.web/src/app/cards/card-viewer/card-viewer.component.css
@@ -1,8 +1,7 @@
 .card-container {
     width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    min-height: 100%;
 }
 
 .sidenav-container {
